[package]
name = "cli-news-library-api-design"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
textwrap = "0.14.2"
dotenv = "0.15.0"
newsapi = {path = "./newsapi"}
termimad = "0.14.2"