[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ureq = "2.4.0"
# soup = "0.5.1"
reqwest = "0.11.9"
scraper = "0.12.0"
select = "0.5.0"
csv = "1.1.6"
tokio = { version = "1.16.1", features = ["full"] }