[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ureq = { version = "*", features = ["json", "charset"] }
ureq = "2.4.0"
text_io = "0.1.9"
scraper = "0.12.0"
select = "0.5.0"
# reqwest = "0.11.9"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
csv = "1.1.6"
tokio = { version = "1.17.0", features = ["full"] }
